# comfyui-xdev-nodes

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_NODE_IDEAS.md  DEBUG_REPORT.md  DEVELOPMENT_BACKLOG.md  DEVELOPMENT_NODES_SUMMARY.md  ENHANCED_FEATURES.md  GPU_MEMORY_IMPLEMENTATION.md  INSIGHTFACE_INTEGRATION.md  LICENSE  OPTIMIZATION_SUMMARY.md  OTHER_AGENTS.md  PERFORMANCE_FRAMEWORK.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE1_REPORT.md  PHASE_1_2_COMPLETION_SUMMARY.md  PROJECT_STATUS_REPORT.md  README.md  SDXL_OPTIMIZATION.md  SECURITY.md  TEMPLATE_BUILDERS_SUMMARY.md  TYPE_COMPATIBILITY_FIX.md  __init__.py  add_display_names_final.py  check_display_names.py  check_faceswap_models.py  complete_phase1.py  complete_phase1_final.py  debug_node_loading.py  debug_sampler.py  diagnose_swapper.py  final_display_names.py  phase2_comprehensive_plan.py  phase2_module_splitter.py  pyproject.toml  pytest.ini  refactor_app.py  refactor_plan.py  (+8 more)
.github/: IMPLEMENT.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: lm-studio.agent.md  prompt-tools.agent.md  xtreme.agent.md
.github/workflows/: ci.yml
backup_pre_refactor/xdev_nodes/: __init__.py  categories.py  registry.py
backups/: basic.py.backup  face_swap.py.backup  faceswap_professional.py.backup  image.py.backup  insightface_faceswap.py.backup  insightface_loaders.py.backup  llm_integration.py.backup  math.py.backup  model_tools.py.backup  prompt.py.backup  text.py.backup  vae_tools.py.backup
backups/phase2/: prompt.py
comfyui_custom_nodes/: __init__.py
comfyui_custom_nodes/xdev/: __init__.py
docs/: 00_Overview.md  01_Node_Anatomy.md  02_Datatypes.md  03_Images_Latents_Masks.md  04_Inputs_Advanced.md  05_JS_Extensions.md  06_Packaging_and_Registry.md  07_Testing_CI.md  08_Troubleshooting.md  09_Configuration_Testing.md  Advanced_Face_Swap_Guide.md  Advanced_Face_Swap_Implementation.md  Advanced_KSampler_Guide.md  Advanced_KSampler_Native_Guide.md  CODE_QUALITY_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_INDEX.md  Development_Nodes_Guide.md  Enhanced_OutputDev_Analysis.md  FACESWAP_MODELS.md  LLM_DEV_Framework_Guide.md  LM_STUDIO_NODES_GUIDE.md  LM_STUDIO_NODE_IDEAS.md  NODE_ANALYSIS.md  Phase4_Advanced_Prompt_Engineering.md  Phase5_LM_Studio_Integration.md  Phase_6_Implementation_Summary.md  Phase_8_Implementation_Summary.md  README.md  REFACTORING_NEXT_STEPS.md  REFACTORING_SUMMARY.md  SDXL_Custom_System_Prompts_Guide.md  SDXL_Expert_Writer_Guide.md  SDXL_Model_Mixer_Guide.md  SDXL_Photo_Enhancer_Implementation.md  Startup_Debugging_Guide.md  Type_Validation_Fix.md
docs/docs/: comfyui_mastery_summary.md  comfyui_node_developments_research.md  comfyui_prompt_mastering_guide.md  comfyui_prompt_mastering_research_plan.md  comfyui_quick_reference_guide.md  comfyui_troubleshooting_guide.md  comfyui_workflow_templates.md  research_plan_comfyui_nodes.md  research_plan_sdxl.md  sdxl.md  sdxl_prompt_database.md
docs/guides/: gpu_memory.md  sdxl_prompting.md  ux_improvements.md
scripts/: advanced-git-manager.ps1  batch_refactor.py  dev-link.ps1  dev-link.sh  git-manager-simple.ps1  git-manager.ps1
tests/: conftest.py  test_advanced_prompt_nodes.py  test_all_refactored.py  test_auto_unload.py  test_basic_nodes.py  test_example_node.py  test_face_swap.py.disabled  test_gpu_memory.py  test_imports.py  test_llm_builder_nodes.py  test_llm_enhanced_nodes.py.disabled  test_llm_integration.py  test_lm_studio.py  test_math_comprehensive.py  test_new_creative_nodes.py  test_new_lm_nodes.py  test_prompt_nodes.py  test_prompt_tools.py  test_refactored_nodes.py  test_template_builders.py.disabled  test_workflow_sdxl.py
workflows/: advanced_face_swap_complete.json  advanced_face_swap_demo.json  advanced_ksampler_comprehensive.json  advanced_ksampler_demo.json  advanced_ksampler_native_comfyui.json  advanced_prompt_engineering_demo.json  comfyui_type_compatibility_test.json  connection_testing.json  dev_nodes_demo.json  enhanced_outputdev_comprehensive_test.json  enhanced_outputdev_test.json  hello_string_save.json  image_control_showcase.json  llm_dev_framework_demo.json  lm_studio_integration_demo.json  math_basic_example.json  phase_6_llm_enhanced_pipeline.json  pick_by_brightness_preview.json  professional_faceswap_demo.json  prompt_tools_demo.json  sdxl_custom_system_prompts_demo.json  sdxl_expert_writer_demo.json  sdxl_model_mixer_test_suite.json  sdxl_photo_enhancer_demo.json  template_builders_demo.json  test_custom_system_prompt_fix.json  test_output_dev_fix.json  test_type_validation_fix.json  text_case_example.json  vae_tools_demo.json
xdev_nodes/: __init__.py  base_classes.py  categories.py  debug_config.py  exceptions.py  mixins.py  optimizations.py  performance.py  registry.py  result_types.py  utils.py
xdev_nodes/nodes/: advanced.py  basic.py  data_analytics.py  dev_nodes.py  face_swap.py  faceswap_professional.py  image.py  image.py.backup  llm_integration.py  (+8 more)
(+109 files in other folders)
