[project]
name = "comfyui-xdev-nodes"
version = "0.1.0"
description = "XDEV LM Studio + prompt automation toolkit for ComfyUI"
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AI for Humans"}
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "Pillow>=10.0.0",
    "safetensors>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.5",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/aiforhumans/comfyui-xdev-nodes"
Repository = "https://github.com/aiforhumans/comfyui-xdev-nodes"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_custom_nodes"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true
combine_as_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["comfyui_custom_nodes", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "ANN201",
    "A",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN201",  # allow missing return annotations in tests
    "F401",    # many tests import modules purely to ensure availability
    "I001",    # relaxed import sorting for readability in test blocks
    "E501",    # descriptive assertions often exceed default line length
    "F541",    # tests occasionally use f-strings for emphasis only
    "E712",    # legacy equality assertions retained for clarity
    "F841",    # some helper variables kept for debugging context
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
